src/objects/BMCServiceDesk__SYSQVQuery__c.object
<CustomObject>
    <description>This object allows you to store data for the QuickView details.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting QV from RF QV Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF QV Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Formatting_Data__c</fullName>
        <description>Stores the formatting rules, conditions, and actions that are used to optimize a QuickView.</description>
        <label>Formatting Data</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QueryStatementData__c</fullName>
        <description>Stores QuickView data for optimization.</description>
        <inlineHelpText>Stores QuickView data for optimization.</inlineHelpText>
        <label>QueryStatementData</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__accessType__c</fullName>
        <label>Access Type</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isQVOptimized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a  QuickView is optimized for the Remedyforce Console.</description>
        <label>isQVOptimized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__viewType__c</fullName>
        <label>View Type</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quickviews</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QVQuery-{0000}</displayFormat>
        <label>SYSQVQuery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVQueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>